--- a/admin/models/forms/category.xml
+++ b/admin/models/forms/category.xml
@@ -43,11 +43,10 @@
 			
 			<!--field name="language" type="languages" client="site" label="FLEXI_CATEGORY_LANGUAGE" description="FLEXI_CATEGORY_LANGUAGE_DESC" /-->
 			<field name="" type="separator" default="FLEXI_CATEGORY_EXTRA" level="level2" />
-			<field name="comments" type="radio" default="" label="FLEXI_ENABLE_COMMENTS" description="FLEXI_ENABLE_COMMENTS_DESC" class="btn-group btn-group-yesno">
+			<field name="comments" type="radio" default="" label="FLEXI_ENABLE_COMMENTS_INTEGRATION" description="FLEXI_ENABLE_COMMENTS_INTEGRATION_DESC" menu="hide" class="btn-group btn-group-yesno">
 				<option value="">FLEXI_USE_GLOBAL</option>
-				<option value="0">FLEXI_NO</option>
-				<option value="1">FLEXI_JCOMMENTS</option>
-				<option value="2">FLEXI_JOMCOMMENTS</option>
+				<option value="0">FLEXI_DISABLE_OR_INTEGRATE_MANUALLY</option>
+				<option value="1">FLEXI_JCOMMENTS_INTEGRATION</option>
 			</field>
 			<field name="automatic_pathways" type="radio" default="" label="FLEXI_CREATE_PATHWAYS_AUTOMATICALLY" description="FLEXI_CREATE_PATHWAYS_AUTOMATICALLY_DESC" class="btn-group btn-group-yesno">
 				<option value="">FLEXI_USE_GLOBAL</option>
