--- a/admin/models/forms/item.xml
+++ b/admin/models/forms/item.xml
@@ -109,12 +109,11 @@
 	<fieldset name="params-advanced" label="FLEXI_PARAMETERS_ITEM_ADVANCED">
 		
 		<field name="" type="separator" default="FLEXI_ADVANCED" description="..." level="level2" />
-		<field name="comments" type="radio" default="" label="FLEXI_ENABLE_COMMENTS" description="FLEXI_ENABLE_COMMENTS_DESC" class="btn-group btn-group-yesno">
-			<option value="">FLEXI_USE_GLOBAL</option>
-			<option value="0">FLEXI_NO</option>
-			<option value="1">FLEXI_JCOMMENTS</option>
-			<option value="2">FLEXI_JOMCOMMENTS</option>
-		</field>
+			<field name="comments" type="radio" default="" label="FLEXI_ENABLE_COMMENTS_INTEGRATION" description="FLEXI_ENABLE_COMMENTS_INTEGRATION_DESC" menu="hide" class="btn-group btn-group-yesno">
+				<option value="">FLEXI_USE_GLOBAL</option>
+				<option value="0">FLEXI_DISABLE_OR_INTEGRATE_MANUALLY</option>
+				<option value="1">FLEXI_JCOMMENTS_INTEGRATION</option>
+			</field>
 		<field name="automatic_pathways" type="radio" default="" label="FLEXI_CREATE_PATHWAYS_AUTOMATICALLY" description="FLEXI_CREATE_PATHWAYS_AUTOMATICALLY_DESC" menu="hide" class="btn-group btn-group-yesno">
 			<option value="">FLEXI_USE_GLOBAL</option>
 			<option value="0">FLEXI_NO</option>
