--- a/admin/models/forms/item.xml
+++ b/admin/models/forms/item.xml
@@ -146,7 +146,7 @@
 	</fieldset>
 	
 	<fieldset name="themes" label="FLEXI_TEMPLATE" addfieldpath="/administrator/components/com_flexicontent/elements">
-		<field name="ilayout" type="itemlayout" label="FLEXI_CHOOSE_SPECIFIC_ITEM_LAYOUT" description="FLEXI_CHOOSE_SPECIFIC_ITEM_LAYOUT_DESC" class="use_select2_lib" onchange="activatePanel(this.value);" />
+		<field name="ilayout" type="itemlayout" label="FLEXI_CHOOSE_SPECIFIC_ITEM_LAYOUT" description="FLEXI_CHOOSE_SPECIFIC_ITEM_LAYOUT_DESC" onchange="activatePanel(this.value);" />
 		<field name="ilayout_mobile" type="itemlayout" skipparams="1" enableparam="use_mobile_layouts" firstoption="FLEXI_USE_DESKTOP" default="" label="FLEXI_CHOOSE_SPECIFIC_MOBILE_LAYOUT" description="FLEXI_CHOOSE_SPECIFIC_MOBILE_LAYOUT_DESC" class="use_select2_lib" />
 	</fieldset>
 	
@@ -223,7 +223,7 @@
 
 <fields name="metadata">
 		<field name="" type="separator" default="FLEXI_ADVANCED" description="" level="level2" />
-		<field name="robots" type="list" label="FLEXI_METADATA_ROBOTS_LABEL" description="FLEXI_METADATA_ROBOTS_DESC" class="use_select2_lib">
+		<field name="robots" type="list" label="FLEXI_METADATA_ROBOTS_LABEL" description="FLEXI_METADATA_ROBOTS_DESC">
 			<option value="">FLEXI_USE_GLOBAL</option>
 			<option value="index, follow">FLEXI_INDEX_FOLLOW</option>
 			<option value="noindex, follow">FLEXI_NOINDEX_FOLLOW</option>
