--- a/modules/mod_flexicontent/tmpl/carousel/carousel.css
+++ b/modules/mod_flexicontent/tmpl/carousel/carousel.css
@@ -1,9 +1,9 @@
 
-/**************/
-/* BOF Colors */
-/**************/
+/****************************/
+/* BOF themes, TODO MORE !! */
+/****************************/
 
-/* Suffixe -green : green borders and links */
+/* Suffix -green : green borders and links */
 .carousel.mod_flexicontent_wrap-green .mod_flexicontent_featured_wrapper_innerbox,
 .carousel.mod_flexicontent_wrap-green .mod_flexicontent_standard_wrapper_innerbox {
 	border-color: darkgreen!important;
@@ -12,7 +12,7 @@
 	color: darkgreen!important;
 }
 
-/* Suffixe -red : red borders and links */
+/* Suffix -red : red borders and links */
 .carousel.mod_flexicontent_wrap-red .mod_flexicontent_featured_wrapper_innerbox,
 .carousel.mod_flexicontent_wrap-red .mod_flexicontent_standard_wrapper_innerbox {
 	border-color: darkred!important;
@@ -21,7 +21,7 @@
 	color: darkred!important;
 }
 
-/* Suffixe -orange : orange borders and links */
+/* Suffix -orange : orange borders and links */
 .carousel.mod_flexicontent_wrap-orange .mod_flexicontent_featured_wrapper_innerbox,
 .carousel.mod_flexicontent_wrap-orange .mod_flexicontent_standard_wrapper_innerbox {
 	border-color: darkorange!important;
@@ -31,7 +31,7 @@
 }
 
 /**************/
-/* EOF Colors */
+/* EOF themes */
 /**************/
 
 
@@ -193,18 +193,13 @@
 	left:0px;
 }
 
-/* INTERNAL ITEM-LIST CONTAINER (TWO COLUMN MODE for standard items) */
-.carousel.mod_flexicontent_wrapper .mod_flexicontent.twocol .mod_flexicontent_standard {
-	/*background: url('images/vdot.gif') repeat-y 50% 0;*/
-}
-
 
 
 /*********************************************************************************************/
 /* ITEM BASIC FIELDS STYLES (FOR CUSTOM FIELDS see below, FOR IMAGE AND DATE see more below) */
 /*********************************************************************************************/
 
-.carousel.mod_flexicontent_wrapper .content_standard {}           /* container of basic elements of standard items excluding title & image */
+.carousel.mod_flexicontent_wrapper .content_standard {}  /* container of basic elements of standard items excluding title & image */
 .carousel.mod_flexicontent_wrapper .content_featured {}  /* container of basic elements of featured items excluding title & image */
 
 
@@ -223,14 +218,17 @@
 	background-color: transparent;
 	color: #08c;
 	text-decoration:none;
-	text-shadow: 0px 0px 3px #000, -1px -1px #000, 1px 1px #000;
+	-webkit-transition: all 0.4s; transition: all 0.4s;
 }
 .carousel.mod_flexicontent_wrapper .fcitem_title:hover a,
 .carousel.mod_flexicontent_wrapper .fcitem_title a:hover {
 	background-color: transparent;
 	color: darkred;
 	text-decoration: none;
-	text-shadow: 0px 0px 3px #000, -1px -1px #000, 1px 1px #000;
+}
+.carousel.mod_flexicontent_wrapper .fc_overlayed .fcitem_title a {
+	/*text-shadow: 1px 1px 2px #000, -1px -1px #000, 1px 1px #000;*/
+	text-shadow: 1px 1px 1px #000;
 }
 
 
@@ -253,7 +251,7 @@
 .carousel.mod_flexicontent_wrapper .date_value_feat {
 	display:inline-block;
 	font-weight: normal;
-	margin: 2px 0;
+	margin: 0;
 	padding: 0;
 	white-space: nowrap;
 }
@@ -261,7 +259,7 @@
 
 /* CONTAINER of item description */
 .carousel.mod_flexicontent_wrapper .fcitem_text { /* for image (not contained inside) see more below */
-/*	text-align:justify;*/
+	/*text-align:justify;*/
 	margin:0px; padding:0px;
 	line-height: 160%;
 }
@@ -272,15 +270,6 @@
 .carousel.mod_flexicontent_wrapper .image_standard {
 	float: left;
 	margin: 0 6px 6px 0;
-}
-.carousel.mod_flexicontent_wrapper .mod_flexicontent_standard_wrapper .image_standard img {
-	opacity:0.7;
-	filter:alpha(opacity=70);
-}
-.carousel.mod_flexicontent_wrapper .mod_flexicontent_standard_wrapper:hover .image_standard img,
-.carousel.mod_flexicontent_wrapper .mod_flexicontent_standard_wrapper.mod_fc_activeitem .image_standard img {
-	opacity:1;
-	filter:alpha(opacity=100);
 }
 
 /* item image styling (link, image, etc) */
@@ -305,8 +294,7 @@
 
 .carousel.mod_flexicontent_wrapper .fcitem_hits img,
 .carousel.mod_flexicontent_wrapper .fcitem_comments img {
-	float:left;
-	margin:0px 4px 0px 0px;
+	vertical-align: middle;
 }
 
 .carousel.mod_flexicontent_wrapper .hits_label,
@@ -353,18 +341,19 @@
 /* CONTAINER of item read more */
 .carousel.mod_flexicontent_wrapper .fcitem_readon {
 	float:left;
-	background: url("images/readmore.png") transparent no-repeat scroll 0px 2px;
-	border:solid gray;
-	border-width:0px 0px;
+	background: url("images/readmore.png") transparent no-repeat scroll 0px 5px;
+	border:solid transparent;
+	border-width:1px 0px;
 	padding: 1px 6px 1px 20px;
 	margin: 3px 3px 3px 4px;
 	display:inline-block;
+	-webkit-transition: all 0.4s; transition: all 0.4s;
 }
 .carousel.mod_flexicontent_wrapper .fcitem_readon:hover {
-	background: url("images/readmore.png") lightgray no-repeat scroll 0px 1px;
+	background-color: rgba(255, 255, 255, 0.6);
 	border: solid gray;
 	border-width:1px 0px;
-	padding: 0px 6px 0px 20px;
+	padding: 1px 6px 1px 20px;
 	margin: 3px 3px 3px 4px;
 	display:inline-block;
 }
@@ -373,20 +362,122 @@
 .carousel.mod_flexicontent_wrapper .fcitem_readon a.readon,
 .carousel.mod_flexicontent_wrapper .fcitem_readon a.readon span {
 	font-weight:bold;
-	line-height:18px;
+	line-height: 160%;
 	padding: 0px;
 	background:none;
 	text-decoration: none!important;
 	color: #08c;
 	cursor:pointer;
+	-webkit-transition: all 0.4s; transition: all 0.4s;
+	vertical-align: middle;
 }
 .carousel.mod_flexicontent_wrapper .fcitem_readon:hover a.readon,
 .carousel.mod_flexicontent_wrapper .fcitem_readon:hover a.readon span {
 	padding: 0px;
 	background:none;
 	text-decoration: none!important;
-	color: red;
+	color: gray;
 }
+
+
+
+/*****************************/
+/* Content PLACEMENT methods */
+/*****************************/
+.carousel.mod_flexicontent_wrapper .fc_block {
+	line-height: 160%;
+}
+.carousel.mod_flexicontent_wrapper .fc_overlayed {
+	/* Fallback for web browsers that don't support RGBa */
+	background-color: rgb(0, 0, 0);
+	/* RGBa with 0.6 opacity */
+	background-color: rgba(0, 0, 0, 0.6);
+	/* For IE 5.5 - 7 */
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#4C000000, endColorstr=#4C000000);
+	/* For IE 8+ */
+	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#4C000000, endColorstr=#4C000000)";
+	width: 96%;
+	height: auto;
+	padding: 2%;
+	margin: 0%;
+	position: absolute;
+	left: 0px;
+}
+.carousel.mod_flexicontent_wrapper .fc_overlayed .fc_block {
+	/*font-family: Raleway;
+	font-weight:900;*/
+	line-height: 160%;
+	color: white;
+	/*text-shadow: 1px 1px 2px #000, -1px -1px #000, 1px 1px #000;*/
+	text-shadow: 1px 1px 1px #000;
+}
+
+.carousel.mod_flexicontent_wrapper .fc_bottom {	bottom: 0px; }
+.carousel.mod_flexicontent_wrapper .fc_top { top: 0px; }
+.carousel.mod_flexicontent_wrapper .fc_full { top: 0px; height:100%; }
+
+.carousel.mod_flexicontent_wrapper .fc_stretch {
+	width:100% !important;
+	border: 0 !important;
+	margin: 0 !important;
+	padding: 0 !important;
+	float: none !important;
+	display: block;
+}
+.carousel.mod_flexicontent_wrapper .fc_float_left {
+	float: left !important;
+	margin: 6px 6px 6px 0;
+	display: block;
+}
+.carousel.mod_flexicontent_wrapper .fc_float_right {
+	float: right !important;
+	margin: 6px 0 6px 6px;
+	display: block;
+}
+.carousel.mod_flexicontent_wrapper .fc_floated {}
+
+.carousel.mod_flexicontent_wrapper .image_featured.fc_float_left img,
+.carousel.mod_flexicontent_wrapper .image_featured.fc_float_right img,
+.carousel.mod_flexicontent_wrapper .image_standard.fc_float_left img,
+.carousel.mod_flexicontent_wrapper .image_standard.fc_float_right img { border-radius: 8px; }
+.carousel.mod_flexicontent_wrapper .image_featured.fc_float_left img,
+.carousel.mod_flexicontent_wrapper .image_featured.fc_float_right img,
+.carousel.mod_flexicontent_wrapper .image_standard.fc_float_left img,
+.carousel.mod_flexicontent_wrapper .image_standard.fc_float_right img { border-radius: 8px; }
+
+.carousel.mod_flexicontent_wrapper .fc_clear { clear: both !important; }
+
+.carousel.mod_flexicontent_wrapper .mod_flexicontent_featured_wrapper .fc_auto_show,
+.carousel.mod_flexicontent_wrapper .mod_flexicontent_standard_wrapper .fc_auto_show {
+	-webkit-transition: max-height 0.5s ease-out, opacity 0.5s linear, padding 0.3s linear, background-color 0.3s linear;
+	transition: max-height 0.5s ease-out, opacity 0.5s linear, padding 0.3s linear, background-color 0.3s linear;
+	
+	opacity:0.0;
+	filter:alpha(opacity=0);
+	
+	max-height: 0;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	overflow-y: hidden;
+}
+
+.carousel.mod_flexicontent_wrapper .mod_flexicontent_featured_wrapper.mod_fc_activeitem .fc_auto_show.fc_show_active,  /* force showing content of active item */
+.carousel.mod_flexicontent_wrapper .mod_flexicontent_standard_wrapper.mod_fc_activeitem .fc_auto_show.fc_show_active { /* force showing content of active item */
+	opacity:1;
+	filter:alpha(opacity=100);
+	max-height: 100%; /* can be approximate, percentage works well if parent height is specific */
+}
+.carousel.mod_flexicontent_wrapper .mod_flexicontent_featured_wrapper.mod_fc_activeitem:hover .fc_auto_show.fc_show_active,  /* show & highlight content of active item */
+.carousel.mod_flexicontent_wrapper .mod_flexicontent_standard_wrapper.mod_fc_activeitem:hover .fc_auto_show.fc_show_active,  /* show & highlight content of active item */
+.carousel.mod_flexicontent_wrapper .mod_flexicontent_featured_wrapper:hover .fc_auto_show,  /* show content if item under mouse */
+.carousel.mod_flexicontent_wrapper .mod_flexicontent_standard_wrapper:hover .fc_auto_show {  /* show content if item under mouse */
+	opacity:1;
+	filter:alpha(opacity=100);
+	background-color: rgba(0, 0, 0, 0.75);
+	max-height: 100%; /* can be approximate, percentage works well if parent height is specific */
+}
+
+
 
 
 /*********************/
@@ -407,6 +498,17 @@
   border:1px solid #444444;
 }
 
+/* image of CURRENTLY ACTIVATED item container */
+.carousel.mod_flexicontent_wrapper .mod_flexicontent_standard_wrapper .image_standard img {
+	-webkit-transition: all 0.5s ease-out; transition: all 0.5s ease-out;
+	opacity:0.9;
+	filter:alpha(opacity=90);
+}
+.carousel.mod_flexicontent_wrapper .mod_flexicontent_standard_wrapper:hover .image_standard img,
+.carousel.mod_flexicontent_wrapper .mod_flexicontent_standard_wrapper.mod_fc_activeitem .image_standard img {
+	opacity:1;
+	filter:alpha(opacity=100);
+}
 
 /* INFO box of currently active item */
 .carousel.mod_flexicontent_wrapper .mod_fc_activeitem_info {
@@ -561,8 +663,9 @@
 	position:relative;
 }
 .carousel.mod_flexicontent_wrapper .mod_fc_item_handles span.mod_fc_item_handle img {
-	opacity:0.7;
-	filter:alpha(opacity=70);
+	-webkit-transition: all 0.5s ease-out; transition: all 0.5s ease-out;
+	opacity:0.9;
+	filter:alpha(opacity=90);
 }
 .carousel.mod_flexicontent_wrapper .mod_fc_item_handles span.mod_fc_item_handle:hover > img {
 	opacity:1;
@@ -784,71 +887,3 @@
 }
 
 
-.carousel.mod_flexicontent_wrapper .fc_overlayed {
-	/* Fallback for web browsers that don't support RGBa */
-	background-color: rgb(0, 0, 0);
-	/* RGBa with 0.6 opacity */
-	background-color: rgba(0, 0, 0, 0.3);
-	/* For IE 5.5 - 7 */
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#4C000000, endColorstr=#4C000000);
-	/* For IE 8+ */
-	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#4C000000, endColorstr=#4C000000)";
-	width: 96%;
-	height: auto;
-	padding: 2%;
-	margin: 0%;
-	position: absolute;
-	left: 0px;
-}
-.carousel.mod_flexicontent_wrapper .fc_overlayed .fc_block {
-	/*font-family: Raleway;
-	font-weight:900;*/
-	font-size: 14px;
-	line-height: 140%;
-	color: white;
-	text-shadow: 0px 0px 3px #000, -1px -1px #000, 1px 1px #000;
-}
-
-.carousel.mod_flexicontent_wrapper .fc_bottom {	bottom: 0px; }
-.carousel.mod_flexicontent_wrapper .fc_top { top: 0px; }
-.carousel.mod_flexicontent_wrapper .fc_full { top: 0px; height:100%; }
-
-.carousel.mod_flexicontent_wrapper .fc_stretch {
-	width:100% !important;
-	border: 0 !important;
-	margin: 0 !important;
-	padding: 0 !important;
-	float: none !important;
-	display: block;
-}
-.carousel.mod_flexicontent_wrapper .fc_float_left {
-	float: left !important;
-	margin: 6px 6px 6px 0;
-	display: block;
-}
-.carousel.mod_flexicontent_wrapper .fc_float_right {
-	float: right !important;
-	margin: 6px 0 6px 6px;
-	display: block;
-}
-.carousel.mod_flexicontent_wrapper .fc_floated {}
-
-.carousel.mod_flexicontent_wrapper .image_featured.fc_float_left img,
-.carousel.mod_flexicontent_wrapper .image_featured.fc_float_right img,
-.carousel.mod_flexicontent_wrapper .image_standard.fc_float_left img,
-.carousel.mod_flexicontent_wrapper .image_standard.fc_float_right img { border-radius: 8px; }
-.carousel.mod_flexicontent_wrapper .image_featured.fc_float_left img,
-.carousel.mod_flexicontent_wrapper .image_featured.fc_float_right img,
-.carousel.mod_flexicontent_wrapper .image_standard.fc_float_left img,
-.carousel.mod_flexicontent_wrapper .image_standard.fc_float_right img { border-radius: 8px; }
-
-.carousel.mod_flexicontent_wrapper .fc_clear { clear: both !important; }
-
-.carousel.mod_flexicontent_wrapper .mod_flexicontent_featured_wrapper .fc_auto_show,
-.carousel.mod_flexicontent_wrapper .mod_flexicontent_standard_wrapper .fc_auto_show { visibility: hidden; }
-.carousel.mod_flexicontent_wrapper .mod_flexicontent_featured_wrapper.mod_fc_activeitem .fc_auto_show.fc_show_active,  /* force showing content of active item */
-.carousel.mod_flexicontent_wrapper .mod_flexicontent_featured_wrapper:hover .fc_auto_show,  /* force showing content if item under mouse */
-.carousel.mod_flexicontent_wrapper .mod_flexicontent_standard_wrapper.mod_fc_activeitem .fc_auto_show.fc_show_active,  /* force showing content of active item */
-.carousel.mod_flexicontent_wrapper .mod_flexicontent_standard_wrapper:hover .fc_auto_show {   /* force showing content if item under mouse */
-	visibility: visible;
-}
