--- a/modules/mod_flexicontent/tmpl/news/news.css
+++ b/modules/mod_flexicontent/tmpl/news/news.css
@@ -1,29 +1,29 @@
 
-/**************/
-/* BOF Colors */
-/**************/
+/****************************/
+/* BOF themes, TODO MORE !! */
+/****************************/
 
-/* Suffixe -green : green borders and links */
-.news.mod_flexicontent_wrap-green .mod_flexicontent_featured_wrapper,
-.news.mod_flexicontent_wrap-green .mod_flexicontent_standard_wrapper {
+/* Suffix -green : green borders and links */
+.news.mod_flexicontent_wrap-green .mod_flexicontent_featured_wrapper_innerbox,
+.news.mod_flexicontent_wrap-green .mod_flexicontent_standard_wrapper_innerbox {
 	border-color: darkgreen!important;
 }
 .news.mod_flexicontent_wrap-green a {
 	color: darkgreen!important;
 }
 
-/* Suffixe -red : red borders and links */
-.news.mod_flexicontent_wrap-red .mod_flexicontent_featured_wrapper,
-.news.mod_flexicontent_wrap-red .mod_flexicontent_standard_wrapper {
+/* Suffix -red : red borders and links */
+.news.mod_flexicontent_wrap-red .mod_flexicontent_featured_wrapper_innerbox,
+.news.mod_flexicontent_wrap-red .mod_flexicontent_standard_wrapper_innerbox {
 	border-color: darkred!important;
 }
 .news.mod_flexicontent_wrap-red a {
 	color: darkred!important;
 }
 
-/* Suffixe -orange : orange borders and links */
-.news.mod_flexicontent_wrap-orange .mod_flexicontent_featured_wrapper,
-.news.mod_flexicontent_wrap-orange .mod_flexicontent_standard_wrapper {
+/* Suffix -orange : orange borders and links */
+.news.mod_flexicontent_wrap-orange .mod_flexicontent_featured_wrapper_innerbox,
+.news.mod_flexicontent_wrap-orange .mod_flexicontent_standard_wrapper_innerbox {
 	border-color: darkorange!important;
 }
 .news.mod_flexicontent_wrap-orange a {
@@ -31,7 +31,7 @@
 }
 
 /**************/
-/* EOF Colors */
+/* EOF themes */
 /**************/
 
 
@@ -172,7 +172,7 @@
 }
 
 
-/* INTERNAL ITEM CONTAINER (ONE COLUMN MODE) */
+/* INTERNAL ITEM-LIST CONTAINER (ONE COLUMN MODE) */
 .news.mod_flexicontent_wrapper .mod_flexicontent_featured,
 .news.mod_flexicontent_wrapper .mod_flexicontent_standard {
 	margin-top: 0px!important;
@@ -193,18 +193,13 @@
 	left:0px;
 }
 
-/* INTERNAL ITEM CONTAINER (TWO COLUMN MODE for standard items) */
-.news.mod_flexicontent_wrapper .mod_flexicontent.twocol .mod_flexicontent_standard {
-	background: url('images/vdot.gif') repeat-y 50% 0;
-}
-
 
 
 /*********************************************************************************************/
 /* ITEM BASIC FIELDS STYLES (FOR CUSTOM FIELDS see below, FOR IMAGE AND DATE see more below) */
 /*********************************************************************************************/
 
-.news.mod_flexicontent_wrapper .content {}           /* container of basic elements of standard items excluding title & image */
+.news.mod_flexicontent_wrapper .content_standard {}  /* container of basic elements of standard items excluding title & image */
 .news.mod_flexicontent_wrapper .content_featured {}  /* container of basic elements of featured items excluding title & image */
 
 
@@ -223,14 +218,17 @@
 	background-color: transparent;
 	color: #08c;
 	text-decoration:none;
-	text-shadow: 0px 0px 3px #000, -1px -1px #000, 1px 1px #000;
+	-webkit-transition: all 0.4s; transition: all 0.4s;
 }
 .news.mod_flexicontent_wrapper .fcitem_title:hover a,
 .news.mod_flexicontent_wrapper .fcitem_title a:hover {
 	background-color: transparent;
 	color: darkred;
 	text-decoration: none;
-	text-shadow: 0px 0px 3px #000, -1px -1px #000, 1px 1px #000;
+}
+.news.mod_flexicontent_wrapper .fc_overlayed .fcitem_title a {
+	/*text-shadow: 1px 1px 2px #000, -1px -1px #000, 1px 1px #000;*/
+	text-shadow: 1px 1px 1px #000;
 }
 
 
@@ -253,7 +251,7 @@
 .news.mod_flexicontent_wrapper .date_value_feat {
 	display:inline-block;
 	font-weight: normal;
-	margin: 2px 0;
+	margin: 0;
 	padding: 0;
 	white-space: nowrap;
 }
@@ -261,7 +259,7 @@
 
 /* CONTAINER of item description */
 .news.mod_flexicontent_wrapper .fcitem_text { /* for image (not contained inside) see more below */
-	text-align:justify;
+	/*text-align:justify;*/
 	margin:0px; padding:0px;
 	line-height: 160%;
 }
@@ -296,8 +294,7 @@
 
 .news.mod_flexicontent_wrapper .fcitem_hits img,
 .news.mod_flexicontent_wrapper .fcitem_comments img {
-	float:left;
-	margin:0px 4px 0px 0px;
+	vertical-align: middle;
 }
 
 .news.mod_flexicontent_wrapper .hits_label,
@@ -344,18 +341,19 @@
 /* CONTAINER of item read more */
 .news.mod_flexicontent_wrapper .fcitem_readon {
 	float:left;
-	background: url("images/readmore.png") transparent no-repeat scroll 0px 2px;
-	border:solid gray;
-	border-width:0px 0px;
+	background: url("images/readmore.png") transparent no-repeat scroll 0px 5px;
+	border:solid transparent;
+	border-width:1px 0px;
 	padding: 1px 6px 1px 20px;
 	margin: 3px 3px 3px 4px;
 	display:inline-block;
+	-webkit-transition: all 0.4s; transition: all 0.4s;
 }
 .news.mod_flexicontent_wrapper .fcitem_readon:hover {
-	background: url("images/readmore.png") lightgray no-repeat scroll 0px 1px;
+	background-color: rgba(255, 255, 255, 0.6);
 	border: solid gray;
 	border-width:1px 0px;
-	padding: 0px 6px 0px 20px;
+	padding: 1px 6px 1px 20px;
 	margin: 3px 3px 3px 4px;
 	display:inline-block;
 }
@@ -364,27 +362,36 @@
 .news.mod_flexicontent_wrapper .fcitem_readon a.readon,
 .news.mod_flexicontent_wrapper .fcitem_readon a.readon span {
 	font-weight:bold;
-	line-height:18px;
+	line-height: 160%;
 	padding: 0px;
 	background:none;
 	text-decoration: none!important;
 	color: #08c;
 	cursor:pointer;
+	-webkit-transition: all 0.4s; transition: all 0.4s;
+	vertical-align: middle;
 }
 .news.mod_flexicontent_wrapper .fcitem_readon:hover a.readon,
 .news.mod_flexicontent_wrapper .fcitem_readon:hover a.readon span {
 	padding: 0px;
 	background:none;
 	text-decoration: none!important;
-	color: red;
+	color: gray;
 }
 
 
+
+/*****************************/
+/* Content PLACEMENT methods */
+/*****************************/
+.news.mod_flexicontent_wrapper .fc_block {
+	line-height: 160%;
+}
 .news.mod_flexicontent_wrapper .fc_overlayed {
 	/* Fallback for web browsers that don't support RGBa */
 	background-color: rgb(0, 0, 0);
 	/* RGBa with 0.6 opacity */
-	background-color: rgba(0, 0, 0, 0.3);
+	background-color: rgba(0, 0, 0, 0.6);
 	/* For IE 5.5 - 7 */
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#4C000000, endColorstr=#4C000000);
 	/* For IE 8+ */
@@ -399,10 +406,10 @@
 .news.mod_flexicontent_wrapper .fc_overlayed .fc_block {
 	/*font-family: Raleway;
 	font-weight:900;*/
-	font-size: 14px;
-	line-height: 140%;
+	line-height: 160%;
 	color: white;
-	text-shadow: 0px 0px 3px #000, -1px -1px #000, 1px 1px #000;
+	/*text-shadow: 1px 1px 2px #000, -1px -1px #000, 1px 1px #000;*/
+	text-shadow: 1px 1px 1px #000;
 }
 
 .news.mod_flexicontent_wrapper .fc_bottom {	bottom: 0px; }
@@ -441,10 +448,31 @@
 .news.mod_flexicontent_wrapper .fc_clear { clear: both !important; }
 
 .news.mod_flexicontent_wrapper .mod_flexicontent_featured_wrapper .fc_auto_show,
-.news.mod_flexicontent_wrapper .mod_flexicontent_standard_wrapper .fc_auto_show { visibility: hidden; }
+.news.mod_flexicontent_wrapper .mod_flexicontent_standard_wrapper .fc_auto_show {
+	-webkit-transition: max-height 0.5s ease-out, opacity 0.5s linear, padding 0.3s linear, background-color 0.3s linear;
+	transition: max-height 0.5s ease-out, opacity 0.5s linear, padding 0.3s linear, background-color 0.3s linear;
+	
+	opacity:0.0;
+	filter:alpha(opacity=0);
+	
+	max-height: 0;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	overflow-y: hidden;
+}
+
 .news.mod_flexicontent_wrapper .mod_flexicontent_featured_wrapper.mod_fc_activeitem .fc_auto_show.fc_show_active,  /* force showing content of active item */
-.news.mod_flexicontent_wrapper .mod_flexicontent_featured_wrapper:hover .fc_auto_show,  /* force showing content if item under mouse */
-.news.mod_flexicontent_wrapper .mod_flexicontent_standard_wrapper.mod_fc_activeitem .fc_auto_show.fc_show_active,  /* force showing content of active item */
-.news.mod_flexicontent_wrapper .mod_flexicontent_standard_wrapper:hover .fc_auto_show {   /* force showing content if item under mouse */
-	visibility: visible;
+.news.mod_flexicontent_wrapper .mod_flexicontent_standard_wrapper.mod_fc_activeitem .fc_auto_show.fc_show_active { /* force showing content of active item */
+	opacity:1;
+	filter:alpha(opacity=100);
+	max-height: 100%; /* can be approximate, percentage works well if parent height is specific */
+}
+.news.mod_flexicontent_wrapper .mod_flexicontent_featured_wrapper.mod_fc_activeitem:hover .fc_auto_show.fc_show_active,  /* show & highlight content of active item */
+.news.mod_flexicontent_wrapper .mod_flexicontent_standard_wrapper.mod_fc_activeitem:hover .fc_auto_show.fc_show_active,  /* show & highlight content of active item */
+.news.mod_flexicontent_wrapper .mod_flexicontent_featured_wrapper:hover .fc_auto_show,  /* show content if item under mouse */
+.news.mod_flexicontent_wrapper .mod_flexicontent_standard_wrapper:hover .fc_auto_show {   /* show content if item under mouse */
+	opacity:1;
+	filter:alpha(opacity=100);
+	background-color: rgba(0, 0, 0, 0.75);
+	max-height: 100%; /* can be approximate, percentage works well if parent height is specific */
 }
