# Continued work on backend managers, moved clearing filters and go button next to text search, added toggle buttons "Upload" and "Why" in filemanager

--- a/admin/assets/css/flexicontentbackend.css
+++ b/admin/assets/css/flexicontentbackend.css
@@ -209,6 +209,9 @@ table.adminlist.fcmanlist {
 	padding:0px !important;
 	margin: 2px 48px 6px 0px;
 }
+.flexicontent #fc-filters-header .use_select2_lib {
+	margin-top: 1px !important;
+}
 
 
 /* filters line */
@@ -272,8 +275,12 @@ table.adminlist.fcmanlist {
 }
 
 /* a little larger icons */
-.flexicontent .icon-publish, .icon-cancel {
-	font-size: 14px;
+.flexicontent [class^="icon-"] {
+	/*font-size: 14px;*/
+}
+.flexicontent #fc-filters-box [class^="icon-arrow-"] {
+	vertical-align: middle;
+	font-size: 18px;
 }
 
 
