--- a/site/assets/css/flexi_form.css
+++ b/site/assets/css/flexi_form.css
@@ -514,7 +514,11 @@ table.paramlist.flexi > tbody > tr:nth-child(2) > td > .fcsep_level2,
 table.paramlist > tbody > tr:nth-child(1) > td > .fcsep_level0,
 table.paramlist > tbody > tr:nth-child(1) > td > .fcsep_level1,
 table.paramlist > tbody > tr:nth-child(1) > td > .fcsep_level2,
-:first-child > .fcsep_level0, :first-child > .fcsep_level1, :first-child > .fcsep_level2 {margin-top:0px !important;}
+:first-child > .fcsep_level0,   :first-child > .fcsep_level1,   :first-child > .fcsep_level2,
+.fc-nomargin > .fcsep_level0, .noseppadding > .fcsep_level1,   .noseppadding > .fcsep_level2
+{
+	margin-top:0px !important;
+}
 div.control-group:first-of-type > div > .fcsep_level0, div.control-group:first-of-type > div > .fcsep_level1, div.control-group:first-of-type > div > .fcsep_level2 {margin-top:0px;}
 
 .fcsep_level3 {
