--- a/site/assets/css/flexi_form.css
+++ b/site/assets/css/flexi_form.css
@@ -3,21 +3,21 @@
  *******************************/
 
 .flexicontent :not(.input-prepend):not(.input-append) > input[type="text"] {
-	font-size:11px !important;
-	display: inline-block !important;
+	font-size:11px;
+	display: inline-block;
 	/*float: none;*/ /* problem with ... */
-	margin: 1px 2px 1px 3px !important;
-	padding: 4px 2px 5px !important;
-	border-radius: 4px !important;
+	margin: 1px 2px 1px 3px;
+	padding: 4px 2px 5px;
+	border-radius: 4px;
 }
 .flexicontent select {
-	font-size: 11px !important;
+	font-size: 12px;
 	display: inline-block;  /* important causes problem hidden elements */
 	/*float: none;*/ /* problem with ... */
-	margin: 1px 2px 1px 3px !important;
-	padding: 2px 2px !important;
-	border-radius: 4px !important;
-	height: auto !important;
+	margin: 1px 2px 1px 3px;
+	padding: 2px 2px;
+	border-radius: 4px;
+	height: auto;
 }
 .flexicontent textarea, .flexicontent fieldset.radio {
 	margin: 1px 2px 1px 3px;
