--- a/admin/assets/css/flexicontentbackend.css
+++ b/admin/assets/css/flexicontentbackend.css
@@ -96,6 +96,15 @@ HEADER ICONS
 .icon-32-restore:before { content: "\6c"; }
 .icon-translate:before  {	content: "\25";}
 
+.icon-32-basicindex:before,
+.icon-32-advindex:before { content: "S"; }
+.icon-32-basicfilter:before,
+.icon-32-advfilter:before { content: "T"; }
+
+.icon-basicindex:before,
+.icon-advindex:before,
+.icon-advindexdirty:before { content: "\e001"; }
+
 
 /*********************/
 .flexicontent #adminForm a.saveorder {
@@ -320,6 +329,15 @@ div#fc-dash-sliders {
 div#fc-dash-sliders .panel .title {
 	padding: 8px;
 }
+div table.fc-table-list.fc-tbl-short .label {
+	min-width: 100px;
+}
+div table.fc-table-list.fc-tbl-short {
+	min-width: 400px;
+	float: left;
+}
+
+div table.fc-table-list,
 div#fc-dash-sliders table.fc-table-list {
 	font: 100%/30px 'Helvetica Neue', helvetica, arial, sans-serif;
 	text-shadow: 0 1px 0 #fff;
@@ -331,8 +349,9 @@ div#fc-dash-sliders table.fc-table-list {
 	margin: 30px auto;
 	text-align: left;
 	min-width: 50%;
-}	
+}
 
+div table.fc-table-list th,
 div#fc-dash-sliders table.fc-table-list th {
 	background: url(../images/noise1.png), linear-gradient(#777, #444);
 	border-left: 1px solid #555;
@@ -347,6 +366,7 @@ div#fc-dash-sliders table.fc-table-list th {
 	text-shadow: 0 1px 0 #000;	
 }
 
+div table.fc-table-list th:after,
 div#fc-dash-sliders table.fc-table-list th:after {
 	background: linear-gradient(rgba(255,255,255,0), rgba(255,255,255,.08));
 	content: '';
@@ -359,15 +379,18 @@ div#fc-dash-sliders table.fc-table-list th:after {
 	width: 100%;
 }
 
+div table.fc-table-list th:first-child,
 div#fc-dash-sliders table.fc-table-list th:first-child {
 	border-left: 1px solid #777;	
 	box-shadow: inset 1px 1px 0 #999;
 }
 
+div table.fc-table-list th:last-child,
 div#fc-dash-sliders table.fc-table-list th:last-child {
 	box-shadow: inset -1px 1px 0 #999;
 }
 
+div table.fc-table-list td,
 div#fc-dash-sliders table.fc-table-list td {
 	border-right: 1px solid #fff;
 	border-left: 1px solid #e8e8e8;
@@ -377,53 +400,69 @@ div#fc-dash-sliders table.fc-table-list td {
 	position: relative;
 	transition: all 300ms;
 }
+div table.fc-table-list.fc-tbl-short td,
+div#fc-dash-sliders table.fc-table-list.fc-tbl-short td {
+	padding: 0px 15px;
+}
+
+div table.fc-table-list td a,
 div#fc-dash-sliders table.fc-table-list td a {
 	text-decoration: none;
 	color:rgb(0, 136, 204);
 	font-weight:bold;
 }
 
+div table.fc-table-list td:first-child,
 div#fc-dash-sliders table.fc-table-list td:first-child {
 	box-shadow: inset 1px 0 0 #fff;
-}	
+}
 
+div table.fc-table-list td:last-child,
 div#fc-dash-sliders table.fc-table-list td:last-child {
 	border-right: 1px solid #e8e8e8;
 	box-shadow: inset -1px 0 0 #fff;
-}	
+}
 
+div table.fc-table-list tr,
 div#fc-dash-sliders table.fc-table-list tr {
 	background: url(../images/noise1.png);	
 }
 
+div table.fc-table-list tr:nth-child(odd) td,
 div#fc-dash-sliders table.fc-table-list tr:nth-child(odd) td {
 	background: #f1f1f1 url(../images/noise1.png);	
 }
 
+div table.fc-table-list tr:last-of-type td,
 div#fc-dash-sliders table.fc-table-list tr:last-of-type td {
 	box-shadow: inset 0 -1px 0 #fff; 
 }
 
+div table.fc-table-list tr:last-of-type td:first-child,
 div#fc-dash-sliders table.fc-table-list tr:last-of-type td:first-child {
 	box-shadow: inset 1px -1px 0 #fff;
-}	
+}
 
+div table.fc-table-list tr:last-of-type td:last-child,
 div#fc-dash-sliders table.fc-table-list tr:last-of-type td:last-child {
 	box-shadow: inset -1px -1px 0 #fff;
-}	
+}
 
+div table.fc-table-list thead tr:hover th,
 div#fc-dash-sliders table.fc-table-list thead tr:hover th {
 	color: white;
 	/*text-shadow: 2px 2px 3px #777 !important;*/
 	background-color: #ffffdd;
 }
 
+div# table.fc-table-list tbody tr:hover td,
 div#fc-dash-sliders table.fc-table-list tbody tr:hover td {
 	color: black;
 	/*text-shadow: 2px 2px 2px #888;*/
 	background-color: #ffffdd;
 }
 
+div table.fc-table-list tbody tr:hover td a,
 div#fc-dash-sliders table.fc-table-list tbody tr:hover td a {
 	color: rgb(0, 136, 204);
 	/*text-shadow: 1px 1px 2px #888;*/
