^ More backend UI updates, updates for the template manager layout, to make it easier to use and more clean

--- a/site/assets/css/flexi_shared.css
+++ b/site/assets/css/flexi_shared.css
@@ -282,8 +282,8 @@ fieldset.fieldgroups legend span img {
 .versions img {
 	vertical-align: middle;
 }
-.active-version {
-	background: #FFFFDD;
+table .active-version {
+	background: #FFFFDD !important;
 }
 #pager {
 	clear:both;
